Fixed href in footer in exhibits.html, index.html and visit.html

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
         <section>
           <h3>Get involved</h3>
           <ul>
-            <li><a href="#involved__support">Support</a></li>
-            <li><a href="#involved__volunteer">Volunteer</a></li>
-            <li><a href="#involved__internships">Internships</a></li>
+            <li><a href="contact.html#involved__support">Support</a></li>
+            <li><a href="contact.html#involved__volunteer">Volunteer</a></li>
+            <li><a href="contact.html#involved__internships">Internships</a></li>
           </ul>
         </section>
         <section>
