Fixed option value in form in contact.html

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
             <select id="subject" name="subject">
               <option value="exhibits">Exhibits</option>
               <option value="support">Support</option>
-              <option value="club question">Exhibits</option>
+              <option value="club question">Club question</option>
               <option value="collections department">Collections department</option>
               <option value="volunteer">Volunteer</option>
               <option value="internship">Internship</option>
