Added 'Top of page' href in footer. Added padding in copyright p of footer.

--- a/events/night_in_the_museum.html
+++ b/events/night_in_the_museum.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="../images/favicon.png" />
   </head>
   <body>
-    <header>
+    <header id="top">
       <label for="hamburger-nav" class="hamburger-nav__label">
         <div><img src="../images/icon/menu-icon.png" alt="View site navigation" /></div>
       </label>
@@ -38,8 +38,8 @@
       </nav>
     </header>
     <main>
-      <div class="event__wrapper short-lines">
-        <section class="event__details">
+      <div class="event__wrapper">
+        <section class="event__details short-lines">
           <h1>Night in the Museum</h1>
           <div><img src="../images/exhibits/night_in_the_museum.jpg" alt="One of halls in our museum" /></div>
           <p>
@@ -54,40 +54,40 @@
       </section>
     </main>
     <footer>
-      <footer>
-        <div class="footer-wrapper short-lines">
-          <section>
-            <h3>Shortcuts</h3>
-            <ul>
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="../visit.html">Visit</a></li>
-              <li><a href="../exhibits.html">Exhibits</a></li>
-              <li><a href="../contact.html">Contact</a></li>
-            </ul>
-          </section>
-          <section>
-            <h3>Get involved</h3>
-            <ul>
-              <li><a href="../contact.html#involved__support">Support</a></li>
-              <li><a href="../contact.html#involved__volunteer">Volunteer</a></li>
-              <li><a href="../contact.html#involved__internships">Internships</a></li>
-            </ul>
-          </section>
-          <section>
-            <h3><a href="../contact.html">Contact</a></h3>
-            <ul>
-              <li>Community Science Museum</li>
-              <li>Tordenskjolds gate 9</li>
-              <li>4612 Kristiansand</li>
-            </ul>
-            <ul class="../contact__information">
-              <li>Phone: 38 00 00 00</li>
-              <li>Email: contact@csm.com</li>
-              <li>Twitter: @communityscience</li>
-            </ul>
-          </section>
-        </div>
-        <p class="short-lines">©2022 Community Science Museum. All rights reserved.</p>
-      </footer>
+      <div class="footer-wrapper short-lines">
+        <section>
+          <h3>Shortcuts</h3>
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../visit.html">Visit</a></li>
+            <li><a href="../exhibits.html">Exhibits</a></li>
+            <li><a href="../contact.html">Contact</a></li>
+            <li><a href="#top">Top of page</a></li>
+          </ul>
+        </section>
+        <section>
+          <h3>Get involved</h3>
+          <ul>
+            <li><a href="../contact.html#involved__support">Support</a></li>
+            <li><a href="../contact.html#involved__volunteer">Volunteer</a></li>
+            <li><a href="../contact.html#involved__internships">Internships</a></li>
+          </ul>
+        </section>
+        <section>
+          <h3><a href="../contact.html">Contact</a></h3>
+          <ul>
+            <li>Community Science Museum</li>
+            <li>Tordenskjolds gate 9</li>
+            <li>4612 Kristiansand</li>
+          </ul>
+          <ul class="../contact__information">
+            <li>Phone: 38 00 00 00</li>
+            <li>Email: contact@csm.com</li>
+            <li>Twitter: @communityscience</li>
+          </ul>
+        </section>
+      </div>
+      <p class="short-lines">©2022 Community Science Museum. All rights reserved.</p>
+    </footer>
   </body>
 </html>
