--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="images/favicon.png" />
   </head>
   <body>
-    <header>
+    <header id="top">
       <label for="hamburger-nav" class="hamburger-nav__label">
         <div><img src="images/icon/menu-icon.png" alt="View site navigation" /></div>
       </label>
@@ -100,6 +100,7 @@
             <li><a href="visit.html">Visit</a></li>
             <li><a href="exhibits.html">Exhibits</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="#top">Top of page</a></li>
           </ul>
         </section>
         <section>
