--- a/events/robotics_and_AI.html
+++ b/events/robotics_and_AI.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="../images/favicon.png" />
   </head>
   <body>
-    <header>
+    <header id="top">
       <label for="hamburger-nav" class="hamburger-nav__label">
         <div><img src="../images/icon/menu-icon.png" alt="View site navigation" /></div>
       </label>
@@ -38,8 +38,8 @@
       </nav>
     </header>
     <main>
-      <div class="event__wrapper short-lines">
-        <section class="event__details">
+      <div class="event__wrapper">
+        <section class="event__details short-lines">
           <h1>Robotics and AI</h1>
           <div><img src="../images/exhibits/robotics_and_AI.jpg" alt="One of our scientists working with the newest machine in science" /></div>
           <p>
@@ -62,6 +62,7 @@
             <li><a href="../visit.html">Visit</a></li>
             <li><a href="../exhibits.html">Exhibits</a></li>
             <li><a href="../contact.html">Contact</a></li>
+            <li><a href="#top">Top of page</a></li>
           </ul>
         </section>
         <section>
