Removed span from exhibits.html and updated contact information

--- a/events/energetica.html
+++ b/events/energetica.html
@@ -81,10 +81,10 @@
             <li>Tordenskjolds gate 9</li>
             <li>4612 Kristiansand</li>
           </ul>
-          <ul class="../contact__information">
-            <li>Phone: 38 00 00 00</li>
-            <li>Email: contact@csm.com</li>
-            <li>Twitter: @communityscience</li>
+          <ul class="contact__information">
+            <li><a href="tel:+4738000000">Phone: 38 00 00 00</a></li>
+            <li><a href="mailto:contact@csm.com">Email: contact@csm.com</a></li>
+            <li><a href="https://twitter.com/communityscience">Twitter: @communityscience</a></li>
           </ul>
         </section>
       </div>
