--- a/exhibits.html
+++ b/exhibits.html
@@ -48,11 +48,9 @@
 
       <section class="events">
         <input type="checkbox" id="events__hamburger" />
-        <label for="events__hamburger" class="hamburger-label">
-          <span class="short-lines">
-            Special events and exhibits
-            <img src="images/icon/view-more.png" alt="View or hide special events and exhibits" />
-          </span>
+        <label for="events__hamburger" class="hamburger-label short-lines">
+          Special events and exhibits
+          <img src="images/icon/view-more.png" alt="View or hide special events and exhibits" />
         </label>
         <div class="events__list short-lines">
           <section>
@@ -83,11 +81,9 @@
       </section>
       <section class="exhibits">
         <input type="checkbox" id="exhibits__hamburger" />
-        <label for="exhibits__hamburger" class="hamburger-label">
-          <span class="short-lines">
-            Exhibition Spaces
-            <img src="images/icon/view-more.png" alt="View or hide exhibits" />
-          </span>
+        <label for="exhibits__hamburger" class="hamburger-label short-lines">
+          Exhibition Spaces
+          <img src="images/icon/view-more.png" alt="View or hide exhibits" />
         </label>
         <div class="exhibits__list short-lines">
           <section>
@@ -163,9 +159,9 @@
             <li>4612 Kristiansand</li>
           </ul>
           <ul class="contact__information">
-            <li>Phone: 38 00 00 00</li>
-            <li>Email: contact@csm.com</li>
-            <li>Twitter: @communityscience</li>
+            <li><a href="tel:+4738000000">Phone: 38 00 00 00</a></li>
+            <li><a href="mailto:contact@csm.com">Email: contact@csm.com</a></li>
+            <li><a href="https://twitter.com/communityscience">Twitter: @communityscience</a></li>
           </ul>
         </section>
       </div>
