Updated 'Get involved' h3 in footer

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
         <div class="notification">Message sent!</div>
       </section>
       <section class="involved-wrapper">
-        <h2 class="short-lines">Get involved</h2>
+        <h2 id="involved" class="short-lines">Get involved</h2>
         <section id="involved__support" class="involved short-lines">
           <h3>Support</h3>
           <p>
@@ -116,7 +116,7 @@
           </ul>
         </section>
         <section>
-          <h3>Get involved</h3>
+          <h3><a href="#involved">Get involved</a></h3>
           <ul>
             <li><a href="#involved__support">Support</a></li>
             <li><a href="#involved__volunteer">Volunteer</a></li>
