Updated copyright in footer

--- a/exhibits.html
+++ b/exhibits.html
@@ -165,7 +165,7 @@
           </ul>
         </section>
       </div>
-      <p class="short-lines">©2022 Community Science Museum. All rights reserved.</p>
+      <p class="copyright short-lines">©2022 Community Science Museum. All rights reserved.</p>
     </footer>
   </body>
 </html>
