images in div for flex and cleanup

--- a/exhibits.html
+++ b/exhibits.html
@@ -58,11 +58,11 @@
         </p>
       </section>
 
-      <section class="events">
+      <div class="events">
         <input type="checkbox" id="events__hamburger" />
         <label for="events__hamburger" class="hamburger-label short-lines">
           Special events and exhibits
-          <img src="images/icon/view-more.png" alt="View or hide special events and exhibits" />
+          <div><img src="images/icon/view-more.png" alt="View or hide special events and exhibits" /></div>
         </label>
         <div class="events__list short-lines">
           <section>
@@ -90,12 +90,12 @@
             </p>
           </section>
         </div>
-      </section>
-      <section class="exhibits">
+      </div>
+      <div class="exhibits">
         <input type="checkbox" id="exhibits__hamburger" />
         <label for="exhibits__hamburger" class="hamburger-label short-lines">
           Exhibition Spaces
-          <img src="images/icon/view-more.png" alt="View or hide exhibits" />
+          <div><img src="images/icon/view-more.png" alt="View or hide exhibits" /></div>
         </label>
         <div class="exhibits__list short-lines">
           <section>
@@ -141,7 +141,7 @@
             </p>
           </section>
         </div>
-      </section>
+      </div>
     </main>
     <footer>
       <div class="footer-wrapper short-lines">
