Fixed duplicate id in form and changed div to figure

--- a/exhibits.html
+++ b/exhibits.html
@@ -62,7 +62,7 @@
         <input type="checkbox" id="events__hamburger" />
         <label for="events__hamburger" class="hamburger-label short-lines">
           Special events and exhibits
-          <div><img src="images/icon/view-more.png" alt="View or hide special events and exhibits" /></div>
+          <figure><img src="images/icon/view-more.png" alt="View or hide special events and exhibits" /></figure>
         </label>
         <div class="events__list short-lines">
           <section>
@@ -95,7 +95,7 @@
         <input type="checkbox" id="exhibits__hamburger" />
         <label for="exhibits__hamburger" class="hamburger-label short-lines">
           Exhibition Spaces
-          <div><img src="images/icon/view-more.png" alt="View or hide exhibits" /></div>
+          <figure><img src="images/icon/view-more.png" alt="View or hide exhibits" /></figure>
         </label>
         <div class="exhibits__list short-lines">
           <section>
