--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
             <input id="name" type="text" name="name" placeholder="Your name ..." />
             <label for="email">Email</label>
             <input id="email" type="email" name="email" placeholder="Your email ..." />
-            <label id="subject">Subject</label>
+            <label for="subject">Subject</label>
             <select id="subject" name="subject">
               <option value="exhibits">Exhibits</option>
               <option value="support">Support</option>
