Applied empty form action

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
     <main>
       <section class="contact short-lines">
         <h1>Contact</h1>
-        <form action="" method="POST">
+        <form action="#" method="POST">
           <div>
             <label for="name">Full name</label>
             <input id="name" type="text" name="name" placeholder="Your name ..." />
