Cleaned up css, changed some div to section, added class showcase

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
           to explore. Many of these exhibits are designed for you to interact with and play around to see science come to life (apart from the
           dinosaur exhibits - they only come to life at night when everyone's gone home).
         </p>
-        <div><img src="images/museum_hall.jpg" alt="The main hall of Community Science" /></div>
+        <div class="showcase"><img src="images/museum_hall.jpg" alt="The main hall of Community Science" /></div>
       </section>
       <section class="explore">
         <h2 class="short-lines">Explore</h2>
         <section class="explore__standard short-lines">
           <h3>For Kids</h3>
-          <div><img src="images/kids.jpg" alt="A future scientist exploring virtual reality" /></div>
+          <div class="showcase"><img src="images/kids.jpg" alt="A future scientist exploring virtual reality" /></div>
           <p>
             Are you a young person looking to learn more about science? Come on down to our museum, there's plenty to see and do. You can learn about
             Newtonian physics from our bumper swing, or why not travel back in time and meet our resident Woolly Mammoth? Our exhibits are designed to
@@ -84,7 +84,7 @@
         </section>
         <section class="explore__reverse short-lines">
           <h3>For Teachers</h3>
-          <div><img src="images/teachers.jpg" alt="An overview of our library" /></div>
+          <div class="showcase"><img src="images/teachers.jpg" alt="An overview of our library" /></div>
           <p>
             As a community-driven museum, we want to work with schools to create places of learning and exploring. Our team are on hand to give your
             students guided tours of the museum, teach them in our learning laboratory, and provide great video presentations that will excite and
@@ -94,7 +94,7 @@
         </section>
         <section class="explore__standard short-lines">
           <h3>For Researchers</h3>
-          <div><img src="images/researchers.jpg" alt="A model of the human mind" /></div>
+          <div class="showcase"><img src="images/researchers.jpg" alt="A model of the human mind" /></div>
           <p>
             Are you looking to get involved with our team of researchers and academics? Our museum offers various ways for you to use our resources
             and contribute towards them. We have online records, laboratory space, and a working relationship with a number of universities around the
