--- a/visit.html
+++ b/visit.html
@@ -52,12 +52,12 @@
     <main>
       <div class="visit__title short-lines"><h1>Visit</h1></div>
       <div class="location-wrapper">
-        <section class="location short-lines">
-          <div class="location__address">
+        <div class="location short-lines">
+          <section class="location__address">
             <h2>Location</h2>
-            <p>The museum is located at: Tordenskjolds gate 9 4612 Kristiansand</p>
-          </div>
-          <div class="location__open">
+            <p>The museum is located at: Tordenskjolds gate 9, 4612 Kristiansand</p>
+          </section>
+          <section class="location__open">
             <h2>Hours</h2>
             <ul>
               <li>Monday; Closed</li>
@@ -68,14 +68,14 @@
               <li>Saturday: 09:00 - 16:00</li>
               <li>Sunday: 09:00 - 13:00</li>
             </ul>
-          </div>
+          </section>
           <div class="location__map">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2105.5505069452156!2d7.9862747161408825!3d58.14772971223204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4638025f01842cbd%3A0x4113fb17771c3dfa!2sNoroff%20Kristiansand!5e0!3m2!1sen!2sno!4v1644491684805!5m2!1sen!2sno"
             >
             </iframe>
           </div>
-        </section>
+        </div>
       </div>
       <section class="information short-lines">
         <h2>Admission</h2>
@@ -86,24 +86,24 @@
         </p>
       </section>
       <div class="accessibility-wrapper">
-        <section class="accessibility short-lines">
-          <div class="accessibility__accessibility">
+        <div class="accessibility short-lines">
+          <section class="accessibility__accessibility">
             <h2>Accessibility</h2>
             <p>The museum has wheelchair accessibility ramps. It also has audio guides and braille display signs for the visually impaired.</p>
-          </div>
-          <div class="accessibility__food">
+          </section>
+          <section class="accessibility__food">
             <h2>Food and drink</h2>
             <p>There is a café attached to the museum where you can get light lunches, soft drinks coffee, snacks and more.</p>
-          </div>
-          <div class="accessibility__shop">
+          </section>
+          <section class="accessibility__shop">
             <h2>Shop</h2>
             <p>
               Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore
               science even after you've left the museum.
             </p>
-          </div>
+          </section>
           <div class="accessibility__image"><img src="images/body.jpg" alt="One of the many human models featured at Community Science" /></div>
-        </section>
+        </div>
       </div>
       <section class="information short-lines">
         <h2 id="clubs">Clubs</h2>
