--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
           <!--<input type="submit" class="cta" value="Send message" />-->
         </form>
         <input type="checkbox" id="message-trigger" />
-        <div class="notification">Message sent!</div>
+        <div class="notification"><p>Message sent!</p></div>
       </section>
       <section class="involved-wrapper">
         <h2 id="involved" class="short-lines">Get involved</h2>
